src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__i64.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_class(r#\"\n            fn main() {\n                let a: I64 = 35\n                let b: I64 = 65\n                let sum = a + b\n                if sum >= 100 {\n                    print(\"Greater or equal than 100\")\n                }\n                printArray(arrayOf(a, b, sum))\n            }\n\n            fn printArray(values: []I64) {\n                let i: I32 = 0\n                loop {\n                    if i >= arrayLen(values) {\n                        break\n                    }\n\n                    print(arrayGet(values, i))\n\n                    i += 1\n                }\n            }\n            \"#)"
---
ClassData
  this_class:		#2	Main
  super_class:		#49	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			java/io/PrintStream
  #06 = Class		#5	java/io/PrintStream
  #07 = Utf8			java/lang/String
  #08 = Class		#7	java/lang/String
  #09 = Utf8			[J
  #10 = Class		#9	[J
  #11 = Long			35
  #13 = Long			65
  #15 = Long			100
  #17 = Utf8			java/lang/System
  #18 = Class		#17	java/lang/System
  #19 = Utf8			out
  #20 = Utf8			Ljava/io/PrintStream;
  #21 = NameAndType	#19:#20	out:Ljava/io/PrintStream;
  #22 = FieldRef	#18.#21	java/lang/System.out:Ljava/io/PrintStream;
  #23 = Utf8			Greater or equal than 100
  #24 = String		#23	Greater or equal than 100
  #25 = Utf8			println
  #26 = Utf8			(Ljava/lang/Object;)V
  #27 = NameAndType	#25:#26	println:(Ljava/lang/Object;)V
  #28 = MethodRef	#6.#27	java/io/PrintStream:println:(Ljava/lang/Object;)V
  #29 = Integer			3
  #30 = Integer			0
  #31 = Integer			1
  #32 = Integer			2
  #33 = Utf8			main$printArray
  #34 = Utf8			([J)V
  #35 = NameAndType	#33:#34	main$printArray:([J)V
  #36 = MethodRef	#2.#35	Main:main$printArray:([J)V
  #37 = Utf8			Code
  #38 = Utf8			StackMapTable
  #39 = Utf8			(J)V
  #40 = NameAndType	#25:#39	println:(J)V
  #41 = MethodRef	#6.#40	java/io/PrintStream:println:(J)V
  #42 = Utf8			main
  #43 = Utf8			([Ljava/lang/String;)V
  #44 = Utf8			[Ljava/lang/String;
  #45 = Class		#44	[Ljava/lang/String;
  #46 = NameAndType	#3:#4	main$main:()V
  #47 = MethodRef	#2.#46	Main:main$main:()V
  #48 = Utf8			java/lang/Object
  #49 = Class		#48	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 5, locals = 7
       0: Ldc2W			#11	35
       3: LStore		0
       5: Ldc2W			#13	65
       8: LStore		2
      10: LLoad			0
      12: LLoad			2
      14: LAdd
      15: LStore		4
      17: LLoad			4
      19: Ldc2W			#15	100
      22: Lcmp
      23: IfI >=		30
      26: IConst			0
      27: Goto				31
      30: IConst			1
      31: IfI ==		45
      34: GetStatic		#22	java/lang/System.out:Ljava/io/PrintStream;
      37: LoadConstant		#24	Greater or equal than 100
      39: InvokeVirtual		#28	java/io/PrintStream:println:(Ljava/lang/Object;)V
      42: Goto				45
      45: LoadConstant		#29	3
      47: NewArray		Long
      49: Dup
      50: LoadConstant		#30	0
      52: LLoad			0
      54: LAStore
      55: Dup
      56: LoadConstant		#31	1
      58: LLoad			2
      60: LAStore
      61: Dup
      62: LoadConstant		#32	2
      64: LLoad			4
      66: LAStore
      67: InvokeStatic		#36	Main:main$printArray:([J)V
      70: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
        Full
          offset_delta = 25
          locals = [ Long,Long,Long ]
          Stack = [  ]
        Full
          offset_delta = 3
          locals = [ Long,Long,Long ]
          Stack = [  ]
        Full
          offset_delta = 0
          locals = [ Long,Long,Long ]
          Stack = [ Integer ]
        Full
          offset_delta = 2
          locals = [ Long,Long,Long ]
          Stack = [  ]
        Full
          offset_delta = 10
          locals = [ Long,Long,Long ]
          Stack = [  ]
  }

  fn main$printArray {
    descriptor: ([J)V
    flags: PUBLIC | STATIC
    Code:
      stack = 3, locals = 3
       0: LoadConstant		#30	0
       2: IStore			1
       4: ILoad			1
       6: ALoad			0
       8: ArrayLength
       9: IfICmp >=		16
      12: IConst			0
      13: Goto				17
      16: IConst			1
      17: IfI ==		21
      20: Return
      21: GetStatic		#22	java/lang/System.out:Ljava/io/PrintStream;
      24: ALoad			0
      26: ILoad			1
      28: LALoad
      29: InvokeVirtual		#41	java/io/PrintStream:println:(J)V
      32: ILoad			1
      34: LoadConstant		#31	1
      36: IAdd
      37: IStore			1
      39: Goto				4
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[J' ]
          Stack = [  ]
        Full
          offset_delta = 3
          locals = [ Object '[J',Integer ]
          Stack = [  ]
        Full
          offset_delta = 7
          locals = [ Object '[J',Integer ]
          Stack = [  ]
        Full
          offset_delta = 3
          locals = [ Object '[J',Integer ]
          Stack = [  ]
        Full
          offset_delta = 0
          locals = [ Object '[J',Integer ]
          Stack = [ Integer ]
        Full
          offset_delta = 2
          locals = [ Object '[J',Integer ]
          Stack = [  ]
        Full
          offset_delta = 0
          locals = [ Object '[J',Integer ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#47	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
