src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__logic-3.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(\"not false\")"
---
ClassData
  this_class:		#10	Main
  super_class:		#14	java/lang/Object
Constant pool:
  #01 = Utf8			main$main
  #02 = Utf8			()V
  #03 = Utf8			Code
  #04 = Utf8			StackMapTable
  #05 = Utf8			main
  #06 = Utf8			([Ljava/lang/String;)V
  #07 = Utf8			[Ljava/lang/String;
  #08 = Class		#7	[Ljava/lang/String;
  #09 = Utf8			Main
  #10 = Class		#9	Main
  #11 = NameAndType	#1:#2	main$main:()V
  #12 = MethodRef	#10.#11	Main:main$main:()V
  #13 = Utf8			java/lang/Object
  #14 = Class		#13	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 1
       0: IConst			0
       1: IfI !=		8
       4: IConst			1
       5: Goto				9
       8: IConst			0
       9: Pop
      10: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
        Full
          offset_delta = 3
          locals = [  ]
          Stack = [  ]
        Full
          offset_delta = 3
          locals = [  ]
          Stack = [  ]
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [ Integer ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#12	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
