src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__print-2.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(\"print(print(\\\"Hallo, Welt!\\\"))\")"
---
ClassData {
    constant_pool: [
        Utf8(
            "java/io/PrintStream",
        ),
        Class {
            name_index: ConstantPoolIndex(
                1,
            ),
        },
        Utf8(
            "java/lang/String",
        ),
        Class {
            name_index: ConstantPoolIndex(
                3,
            ),
        },
        Utf8(
            "java/lang/System",
        ),
        Class {
            name_index: ConstantPoolIndex(
                5,
            ),
        },
        Utf8(
            "out",
        ),
        Utf8(
            "Ljava/io/PrintStream;",
        ),
        NameAndType {
            name_index: ConstantPoolIndex(
                7,
            ),
            type_index: ConstantPoolIndex(
                8,
            ),
        },
        FieldRef {
            class_index: ConstantPoolIndex(
                6,
            ),
            name_and_type_index: ConstantPoolIndex(
                9,
            ),
        },
        Utf8(
            "Hallo, Welt!",
        ),
        String {
            string_index: ConstantPoolIndex(
                11,
            ),
        },
        Utf8(
            "println",
        ),
        Utf8(
            "(Ljava/lang/String;)V",
        ),
        NameAndType {
            name_index: ConstantPoolIndex(
                13,
            ),
            type_index: ConstantPoolIndex(
                14,
            ),
        },
        MethodRef {
            class_index: ConstantPoolIndex(
                2,
            ),
            name_and_type_index: ConstantPoolIndex(
                15,
            ),
        },
        Utf8(
            "Null",
        ),
        String {
            string_index: ConstantPoolIndex(
                17,
            ),
        },
        Utf8(
            "main",
        ),
        Utf8(
            "()V",
        ),
        Utf8(
            "Code",
        ),
        Utf8(
            "StackMapTable",
        ),
        Utf8(
            "[Ljava/lang/String;",
        ),
        Class {
            name_index: ConstantPoolIndex(
                23,
            ),
        },
        Utf8(
            "Main",
        ),
        Class {
            name_index: ConstantPoolIndex(
                25,
            ),
        },
        NameAndType {
            name_index: ConstantPoolIndex(
                19,
            ),
            type_index: ConstantPoolIndex(
                20,
            ),
        },
        MethodRef {
            class_index: ConstantPoolIndex(
                26,
            ),
            name_and_type_index: ConstantPoolIndex(
                27,
            ),
        },
        Utf8(
            "([Ljava/lang/String;)V",
        ),
        Utf8(
            "java/lang/Object",
        ),
        Class {
            name_index: ConstantPoolIndex(
                30,
            ),
        },
    ],
    this_class: ConstantPoolIndex(
        26,
    ),
    super_class: ConstantPoolIndex(
        31,
    ),
    methods: [
        Method {
            flags: 9,
            name_index: ConstantPoolIndex(
                19,
            ),
            descriptor_index: ConstantPoolIndex(
                20,
            ),
            attributes: [
                AttributeInfo {
                    name_index: ConstantPoolIndex(
                        21,
                    ),
                    attribute: Code(
                        CodeAttribute {
                            max_locals: 1,
                            code: [
                                GetStatic(
                                    ConstantPoolIndex(
                                        10,
                                    ),
                                ),
                                GetStatic(
                                    ConstantPoolIndex(
                                        10,
                                    ),
                                ),
                                Ldc(
                                    12,
                                ),
                                InvokeVirtual(
                                    ConstantPoolIndex(
                                        16,
                                    ),
                                ),
                                Ldc(
                                    18,
                                ),
                                InvokeVirtual(
                                    ConstantPoolIndex(
                                        16,
                                    ),
                                ),
                                Return,
                            ],
                            attributes: [
                                AttributeInfo {
                                    name_index: ConstantPoolIndex(
                                        22,
                                    ),
                                    attribute: StackMapTable(
                                        StackMapTableAttribute {
                                            entries: [
                                                Full {
                                                    offset_delta: 0,
                                                    locals: [],
                                                    stack: [],
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ],
        },
        Method {
            flags: 9,
            name_index: ConstantPoolIndex(
                19,
            ),
            descriptor_index: ConstantPoolIndex(
                29,
            ),
            attributes: [
                AttributeInfo {
                    name_index: ConstantPoolIndex(
                        21,
                    ),
                    attribute: Code(
                        CodeAttribute {
                            max_locals: 2,
                            code: [
                                InvokeStatic(
                                    ConstantPoolIndex(
                                        28,
                                    ),
                                ),
                                Return,
                            ],
                            attributes: [
                                AttributeInfo {
                                    name_index: ConstantPoolIndex(
                                        22,
                                    ),
                                    attribute: StackMapTable(
                                        StackMapTableAttribute {
                                            entries: [
                                                Full {
                                                    offset_delta: 0,
                                                    locals: [
                                                        Object {
                                                            constant_pool_index: ConstantPoolIndex(
                                                                24,
                                                            ),
                                                        },
                                                    ],
                                                    stack: [],
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ],
        },
    ],
}
