src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__print.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(\"print(2 * 3)\")"
---
ClassData
  this_class:		#21	Main
  super_class:		#26	java/lang/Object
Constant pool:
  #00 = Utf8			java/io/PrintStream
  #01 = Class		#0	java/io/PrintStream
  #02 = Utf8			java/lang/System
  #03 = Class		#2	java/lang/System
  #04 = Utf8			out
  #05 = Utf8			Ljava/io/PrintStream;
  #06 = NameAndType	#4:#5	out:Ljava/io/PrintStream;
  #07 = FieldRef		#3.#6	java/lang/System.out:Ljava/io/PrintStream;
  #08 = Integer			2
  #09 = Integer			3
  #10 = Utf8			println
  #11 = Utf8			(I)V
  #12 = NameAndType	#10:#11	println:(I)V
  #13 = MethodRef		#1.#12	java/io/PrintStream:println:(I)V
  #14 = Utf8			main
  #15 = Utf8			()V
  #16 = Utf8			Code
  #17 = Utf8			StackMapTable
  #18 = Utf8			[Ljava/lang/String;
  #19 = Class		#18	[Ljava/lang/String;
  #20 = Utf8			Main
  #21 = Class		#20	Main
  #22 = NameAndType	#14:#15	main:()V
  #23 = MethodRef		#21.#22	Main:main:()V
  #24 = Utf8			([Ljava/lang/String;)V
  #25 = Utf8			java/lang/Object
  #26 = Class		#25	java/lang/Object

{
  fn main {
    descriptor: ()V
    flags: 9
    Code:
      stack = 8, locals = 1
       0: GetStatic		#7	java/lang/System.out:Ljava/io/PrintStream;
       3: LoadConstant		#8	2
       5: LoadConstant		#9	3
       7: IMul
       8: InvokeVirtual		#13	java/io/PrintStream:println:(I)V
      11: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: 9
    Code:
      stack = 8, locals = 2
      0: InvokeStatic		#23	Main:main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
